# SoccerMind

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: 기획서.md  배포.md  아키텍처.md
soccermind/: __init__.py  calibrate.py
soccermind/api/: __init__.py  app.py  deps.py  routes.py  schemas.py
soccermind/config/: __init__.py  settings.py
soccermind/core/: __init__.py  aliases.py  models.py  name_resolver.py  orchestrator.py
soccermind/data/: __init__.py  api_football.py  base.py  cache.py  elo_provider.py  football_data.py  results_provider.py  web_search.py  wikipedia.py
soccermind/engine/: __init__.py  calibration.py  config.py  elo.py  metrics.py  rating_history.py  score_matrix.py  scorers.py  tournament.py
soccermind/llm/: __init__.py  augmenter.py  base.py  fallback.py  prompts.py
tests/: test_api.py  test_api_football.py  test_augmenter.py  test_cache.py  test_calibrate.py  test_calibration.py  test_config_store.py  test_elo.py  test_llm_fallback.py  test_metrics.py  test_name_resolver.py  test_orchestrator.py  test_providers.py  test_rating_history.py  test_results_provider.py  test_score_matrix.py  test_scorers.py  test_tournament.py  test_web_search.py  test_wikipedia.py
web/: app.js  index.html  style.css
