[project]
name = "soccermind"
version = "0.1.0"
description = "두 국가명 → 승리국·스코어·득점자 예측하는 실시간 데이터 기반 분석 도구"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "pydantic>=2.6",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
llm = ["anthropic>=0.40"]
dev = ["pytest>=8.0", "ruff>=0.4"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["soccermind*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
